--- a/www/client-core/css/consts.css
+++ b/www/client-core/css/consts.css
@@ -1,7 +1,8 @@
 :root {
 	--BG_COLOR: #291f1b;
 	--INPUT_COLOR: #1d1515;
-	--TEXT_COLOR: #e7ded0;
+	--TEXT_COLOR: #a19279;
+	--MAIN_TEXT_COLOR: #e7ded0;
 
 	--BRAND_COLOR: #583d18;
 	--BRAND_COLOR_LIGHT: #7e6617;
