--- a/www/client-core/css/style.css
+++ b/www/client-core/css/style.css
@@ -701,7 +701,7 @@ img {
 	background: #765;
 	border: 1px solid #a98;
 	color: #fed;
-	border-radius: 5px;
+	border-radius: 100px;
 	padding: 12px;
 	margin: 3px;
 	cursor: pointer;
@@ -1152,15 +1152,6 @@ img {
 	opacity: 0.3;
 }
 
-.field-container-type-splitter {
-	margin-top: 30px;
-	margin-left: -20px;
-	margin-right: -20px;
-	padding: 5px;
-	padding-left: 20px;
-	border-radius: 50px;
-}
-
 .form-container-node-nodes .form-item-row-buttons .danger-btn,
 .form-container-node-nodes .delete-button {
 	display: none;
@@ -1328,7 +1319,7 @@ img {
 }
 
 
-.field-wrap-disabled {
+.field-wrap-disabled .field-wrap-value>*:first-child {
 	opacity: 0.5;
 	pointer-events: none;
 }
@@ -1398,15 +1389,15 @@ img {
 }
 
 .field-wrap-help-body {
-	position: fixed;
+	position: absolute;
 	z-index: 2;
 	width: 300px;
-	margin-left: -150px;
+	margin-left: -320px;
 	margin-top: -50px;
 	background: #707072;
 	color: #f0f0f2;
-	padding: 10px;
-	border-radius: 5px;
+	padding: 10px 30px;
+	border-radius: 200px;
 	font-size: 80%;
 }
 
@@ -1420,12 +1411,12 @@ img {
 .field-wrap-alert {
 	display: inline-block;
 	color: #f33;
-	margin-left: 5px;
+	margin-top: 4px;
+	margin-left: 13px;
 }
 
 .field-wrap-alert-success {
-	border-top: 2px solid #3f3;
-	color: #070;
+	color: unset;
 }
 
 .field-wrap-label-lang {
@@ -1461,10 +1452,26 @@ img {
 	font-size: 120%;
 }
 
+.field-container-type-splitter {
+	box-shadow: 0px -9px 11px 0px var(--INPUT_COLOR);
+	border-top: 1px solid var(--BRAND_COLOR_DARK);
+	margin-top: 50px;
+	max-width: unset;
+	margin-left: -20px;
+	margin-right: -20px;
+	padding: 5px;
+	padding-left: 20px;
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+}
+
 .field-container-type-splitter .field-wrap-label {
-	font-size: 130%;
+	margin-top: 10px;
+	margin-bottom: -5px;
+	font-size: 120%;
 	color: var(--BRAND_COLOR_HEADER);
 }
+
 
 @keyframes shake-animation {
 	0% {
