--- a/www/client-core/css/style.css
+++ b/www/client-core/css/style.css
@@ -348,7 +348,7 @@ img {
 }
 
 .field-container-type-lookup-1-to-n .create-button {
-	padding: 7px 12px;
+	padding: 7px 22px 7px 12px;
 }
 
 .default-btn {
@@ -891,6 +891,10 @@ img {
 	padding: 10px;
 }
 
+.field-lookup-wrapper .list-header {
+	margin-bottom: 0;
+}
+
 .clear-btn {
 	display: inline-block;
 	border-radius: 30px;
@@ -1074,6 +1078,13 @@ img {
 	font-weight: bold;
 	font-size: 85%;
 	margin-right: 10px;
+}
+
+.selected-file {
+	background-color: var(--BRAND_COLOR_DARK);
+	border-radius: 40px;
+	padding: 7px 20px;
+	margin: 5px;
 }
 
 .form-full {
