--- a/www/client-core/css/style.css
+++ b/www/client-core/css/style.css
@@ -351,6 +351,10 @@ img {
 	padding: 7px 22px 7px 12px;
 }
 
+.field-container-type-lookup-1-to-n .form-full {
+	font-size: 85%;
+}
+
 .default-btn {
 	color: #bbb;
 }
@@ -371,7 +375,7 @@ img {
 
 .form-layer-modal .close-popup-wrap {
 	position: relative;
-	right: -48px;
+	right: 16px;
 	display: block;
 }
 
@@ -508,6 +512,7 @@ img {
 }
 
 .left-bar-collapse-button {
+	width: 50px;
 	font-size: 200%;
 	padding-top: 5px;
 	padding-bottom: 5px;
@@ -597,6 +602,7 @@ img {
 }
 
 .top-bar-logo {
+	border-radius: 30px;
 	margin-left: 10px;
 	display: block;
 }
@@ -772,11 +778,12 @@ img {
 }
 
 .select-control-list {
+	box-shadow: 0px 7px 24px 10px rgba(66, 68, 90, 1);
 	margin-left: 10px;
 	position: absolute;
 	margin-top: -2px;
 	z-index: 4;
-	background: var(--INPUT_COLOR);
+	background: var(--BG_COLOR);
 	padding: 7px;
 	border-bottom-left-radius: 20px;
 	border-bottom-right-radius: 20px;
@@ -1127,6 +1134,8 @@ img {
 }
 
 .form .header-tabs {
+	border-top-right-radius: 40px;
+	border-top-left-radius: 40px;
 	background-color: var(--INPUT_COLOR);
 	margin: 20px -20px 0 -20px;
 	padding: 30px 20px 0 20px;
@@ -1176,6 +1185,12 @@ img {
 
 .list-item-draft {
 	opacity: 0.3;
+}
+
+.form-container-node-fields,
+.form-container-node-nodes {
+	font-family: 'Courier New', Courier, monospace !important;
+	--BG_COLOR: rgb(43, 37, 33);
 }
 
 .form-container-node-nodes .form-item-row-buttons .danger-btn,
